--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     一日一善
     徳を積んで挑戦
     いい席は当たんないか...
-    もう やー…
+    もう やー...
     だけど君に会える 
     それだけで捗る!
     ああまたニヤけちゃう
@@ -41,8 +41,8 @@
     最高!
     君に会う前は
     メイクも気合い入れます!
-    あれやり過ぎちゃった…..
-    もう やー....
+    あれやり過ぎちゃった...
+    もう やー...
     落ち込んじゃった時は
     待ち受けの君に 
     いつも癒されてます
